add register/login psql
